--- a/Fidelity Capstone.ipynb
+++ b/Fidelity Capstone.ipynb
@@ -8,7 +8,7 @@
     "Credit EDA Assignment\n",
     "\n",
     "Problem Statement:\n",
-    "To identify key driving factors behind loan defaul for better risk assessment \n",
+    "To identify key driving factors behind loan default for better risk assessment \n",
     "\n",
     "Files provided are as follows:\n",
     "1. 'application_data.csv'  contains all the information of the client at the time of application.\n",
