--- a/Fidelity Capstone.ipynb
+++ b/Fidelity Capstone.ipynb
@@ -5,7 +5,7 @@
    "id": "d0f1bd13",
    "metadata": {},
    "source": [
-    "Credit EDA Assignment\n",
+    "Fidelity Bank\n",
     "\n",
     "Problem Statement:\n",
     "To identify key driving factors behind loan default for better risk assessment \n",
